More tasks completed...
When products are purchased, order history is updated
Can now select delivery OR pick-up
If this is the first purchase of the year for the customer, an
additional $40 membership fee is applied

TODO:
   View own order history
   Change account information
   Supplier login
   Banking service

	modified:   public/CSS/styles.css
	modified:   public/config_files/orders.json
	modified:   public/store.js
	modified:   server.js
	modified:   views/store.ejs

--- a/views/store.ejs
+++ b/views/store.ejs
@@ -55,10 +55,29 @@
             </div>
             <div class="cart-items">
             </div>
-            <div class="cart-total">
-                <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$0</span>
+            <div class="cart-information">
+                <div class="cart-delivery">
+                    <div>
+                        <input class="cart-delivery-method" id="delivery" name="shipping" type="radio" checked=true>
+                        <label class="cart-delivery-method" for="delivery" >Delivery ($3)</label>
+                    </div>
+                    <div>
+                        <input class="cart-delivery-method" id="pick-up" name="shipping" type="radio">
+                        <label class="cart-delivery-method" for="pick-up">Pick-Up</label>
+                    </div>
+                </div>
+                <% if(membershipFee){ %>
+                <div class="cart-membership-fee">
+                    <strong class="cart-membership-fee">Membership Fee</strong>
+                    <span class="cart-membership-fee">$40</span>
+                </div>
+                <% } %>
+                <div class="cart-total">
+                    <strong class="cart-total-title">Total</strong>
+                    <span class="cart-total-price">$0</span>
+                </div>
             </div>
+            
             <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
         </section>
     </body>
