--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -230,18 +230,38 @@ html, body {
     margin-right: 25px;
 }
 
+.cart-information{
+    float: right;
+}
+.cart-delivery{
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cart-membership-fee{
+    margin-top: 10px;
+    margin-left: 2px;
+}
+.cart-delivery-method{
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.cart-total {
+    margin-left: 4px;
+    margin-top: 10px;
+    margin-right: 15px;
+}
+
 .cart-row:last-child {
     border-bottom: 1px solid black;
 }
 
 .cart-row:last-child .cart-column {
     border: none;
-}
-
-.cart-total {
-    text-align: end;
-    margin-top: 10px;
-    margin-right: 10px;
 }
 
 .cart-total-title {
