Completed more tasks
Customer accounts now can view their accoutn information. This project
does not require support for changing information
Customer accoutns now can view all past orders, and their status. This
project requires the customer to make no changes to said orders

TODO:
   Supplier login (view stock, process orders, ship orders)
   Banking software

	modified:   public/CSS/styles.css
	deleted:    public/account.html
	new file:   public/account.js
	modified:   public/config_files/orders.json
	modified:   public/store.js
	modified:   server.js
	new file:   views/account.ejs
	modified:   views/store.ejs

--- a/views/store.ejs
+++ b/views/store.ejs
@@ -10,7 +10,7 @@
         <header class="main-header">
             <nav class="main-nav nav">
                 <ul>
-                    <li><a href="account.html">ACCOUNT</a></li>
+                    <li><a href="/account">ACCOUNT</a></li>
                     <li><a href="/store">STORE</a></li>
                 </ul>
             </nav>
