--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -160,13 +160,15 @@ html, body {
     justify-content: space-around;
 }
 
-.cart-header {
+.cart-header,
+.order-header {
     font-weight: bold;
     font-size: 1.25em;
     color: #333;
 }
 
-.cart-column {
+.cart-column,
+.order-column {
     display: flex;
     align-items: center;
     border-bottom: 1px solid black;
@@ -175,15 +177,26 @@ html, body {
     margin-top: 10px;
 }
 
-.cart-row {
+.order-label {
+    display: flex;
+    align-items: center;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row,
+.order-row {
     display: flex;
 }
 
-.cart-item {
+.cart-item,
+.order-item {
     width: 45%;
 }
 
-.cart-price {
+.cart-price,
+.order-price {
     width: 20%;
     font-size: 1.2em;
     color: #333;
@@ -193,13 +206,19 @@ html, body {
     width: 35%;
 }
 
-.cart-item-title {
+.order-quantity {
+    width: 15%;
+}
+
+.cart-item-title,
+.order-item-title {
     color: #333;
     margin-left: .5em;
     font-size: 1.2em;
 }
 
-.cart-item-image {
+.cart-item-image,
+.order-item-image{
     width: 75px;
     height: auto;
     border-radius: 10px;
@@ -233,6 +252,11 @@ html, body {
 .cart-information{
     float: right;
 }
+
+.order-information{
+    float: right;
+
+}
 .cart-delivery{
     text-align: end;
     margin-top: 10px;
@@ -250,32 +274,64 @@ html, body {
     margin-right: 5px;
 }
 
-.cart-total {
+.cart-total,
+.order-total {
     margin-left: 4px;
     margin-top: 10px;
     margin-right: 15px;
 }
 
-.cart-row:last-child {
+.cart-row:last-child{
     border-bottom: 1px solid black;
 }
 
-.cart-row:last-child .cart-column {
+.cart-row:last-child .cart-column,
+.order-row:last-child .order-column {
     border: none;
 }
 
-.cart-total-title {
+.cart-total-title,
+.order-total-title {
     font-weight: bold;
     font-size: 1.5em;
     color: black;
     margin-right: 20px;
 }
 
-.cart-total-price {
+.cart-total-price,
+.order-total-price  {
     color: #333;
     font-size: 1.1em;
 }
 
+.order-status {
+    margin-top: 10px;
+}
+
+.account-label{
+    height: 34px;
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+
+.account-info-container{
+    height: 38px;
+}
+
+.account-email-input,
+.account-password-input,
+.account-card-number-input,
+.account-expiration-date-input,
+.account-card-cvv-input {
+    color: #333;
+    font-size: 1.1em;
+    padding-left: 5px;
+}
+
+.order{
+    margin-bottom: 160px;
+}
 .btn-purchase {
     display: block;
     margin: 40px auto 80px auto;
