--- a/views/store.ejs
+++ b/views/store.ejs
@@ -20,7 +20,7 @@
             <h2 class="section-header">MUSIC</h2>
             <div class="shop-items">
                 <% items.music.forEach(function(item){ %>
-                    <div class="shop-item" data-item-id="<%= item.id %>" data-item-quantity="<%= item.quantity %>">
+                    <div class="shop-item" data-item-id="<%= item.id %>" data-item-quantity="<%= item.available %>">
                         <span class="shop-item-title"><%= item.name %></span>
                         <img class="shop-item-image" src="Images/<%= item.imgName %>">
                         <div class="shop-item-details">
@@ -35,7 +35,7 @@
             <h2 class="section-header">MERCH</h2>
             <div class="shop-items">
                 <% items.merch.forEach(function(item){ %>
-                    <div class="shop-item" data-item-id="<%= item.id %>" data-item-quantity="<%= item.quantity %>">
+                    <div class="shop-item" data-item-id="<%= item.id %>" data-item-quantity="<%= item.available %>">
                         <span class="shop-item-title"><%= item.name %></span>
                         <img class="shop-item-image" src="Images/<%= item.imgName %>">
                         <div class="shop-item-details">
