--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -23,6 +23,7 @@
                         <div class="order-history">
                             <div class="order-row">
                                 <span class="order-item order-label">Customer ID: <%= item.customer_id %></span>
+                                <span class="order-item order-label order-id" data-order-id = <%= item.order_id %>>Order ID: <%= item.order_id %></span>
                             </div>
                             <div class="order-row">
                                 <span class="order-item order-label">Date: <%= item.orderDate %></span>
@@ -34,7 +35,7 @@
                                 <span class="order-price order-header order-column">PRICE</span>
                             </div>
                             <% item.items.forEach(function(purchased){ %>
-                                <div class="order-row">
+                                <div class="order-row purchased-product">
                                     <div class="order-item order-column">
                                         <img class="order-item-image" src="<%= purchased.img %>" width="100" height="100">
                                         <span class="order-item-title"><%= purchased.title %></span>
@@ -44,6 +45,7 @@
                                 </div>
                             <% }) %>
                             <div class="order-status-control">
+                                <button class="btn btn-primary supplier-order-order-button" type="button">MOVE ORDER TO 'ORDERED'</button>
                                 <button class="btn btn-primary supplier-ready-order-button" type="button">MOVE ORDER TO 'READY'</button>
                                 <button class="btn btn-primary supplier-ship-order-button" type="button">MOVE ORDER TO 'SHIPPED'</button>
                             </div>
